--- a/Homepage2/style.css
+++ b/Homepage2/style.css
@@ -4,12 +4,16 @@ body {
   font-family: Arial, sans-serif;
 
 }
-
+ 
 .header-cls {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+  background-color: white;
 }
 
 .header-cls img {
@@ -19,15 +23,16 @@ body {
 
 .menu-items {
   display: flex;
-
   justify-content: space-between;
   gap: 30px;
 
 }
-
-.hamburger {
+.btn-close{
   display: none;
 }
+.hamburger {
+  display: none;
+ }
 
 .menu-items a {
   text-decoration: none;
@@ -97,7 +102,7 @@ body {
   margin-bottom: 20px;
 }
 
-.overlay button {
+.overlay a {
   background-color: #ff4d4d;
   color: white;
   border: none;
@@ -105,6 +110,7 @@ body {
   font-size: 1rem;
   border-radius: 5px;
   cursor: pointer;
+  text-decoration: none;
   transition: 0.3s;
 }
 
@@ -158,13 +164,14 @@ body {
   transition: opacity 0.4s ease;
 }
 
-.cat-card button {
+.cat-card a {
   position: absolute;
   top: 80%;
   left: 50%;
   transform: translate(-50%, -50%);
   background: #fff;
   color: #333;
+  text-decoration: none;
   border: none;
   padding: 10px 20px;
   font-size: 1rem;
@@ -172,6 +179,7 @@ body {
   cursor: pointer;
   opacity: 1;
   transition: opacity 0.4s ease, transform 0.3s ease;
+  z-index: 1;
 }
 
 .cat-card:hover img {
@@ -180,13 +188,13 @@ body {
 
 
 
-.cat-card:hover button {
+.cat-card:hover a {
   opacity: 1;
   transform: translate(-50%, -50%) scale(1.05);
 
 }
 
-.cat-card button:hover {
+.cat-card a:hover {
   background: #ff6f61;
   color: white;
 }
@@ -226,37 +234,39 @@ body {
   opacity: 0;
 }
 
-.items-card button {
+.items-card a {
   position: absolute;
   top: 70%;
   left: 50%;
   transform: translate(-50%, -50%);
   background: #fff;
   color: #333;
+  text-decoration: none;
   border: none;
-  padding: 10px 20px;
+  padding: 16px 20px;
   font-size: 1rem;
   border-radius: 6px;
   cursor: pointer;
   transition: background 0.3s ease;
+  z-index: 1;
 
 }
 
-.items-card:nth-child(1) button {
+.items-card:nth-child(1) a {
   background: #0385ff;
   color: white;
 }
 
-.items-card:nth-child(1):hover button {
+.items-card:nth-child(1):hover a {
   background: #0022ffad;
 }
 
-.items-card:nth-child(2) button {
+.items-card:nth-child(2) a {
   background: #ff00ff;
   color: white;
 }
 
-.items-card:nth-child(2):hover button {
+.items-card:nth-child(2):hover a {
   background: rgb(255, 0, 170);
 
 }
@@ -340,9 +350,10 @@ body {
   margin-bottom: 15px;
 }
 
-.about-right-content button {
+.about-right-content a {
   background: #e91e63;
   border: none;
+  text-decoration: none;
   color: #fff;
   padding: 12px 30px;
   border-radius: 30px;
@@ -352,7 +363,7 @@ body {
   transition: 0.3s ease-in-out;
 }
 
-.about-right-content button:hover {
+.about-right-content a:hover {
   background: #c2185b;
   transform: translateY(-3px);
 }
@@ -507,7 +518,7 @@ body {
   border-radius: 12px;
   overflow: hidden;
   box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s;
+  transition: transform 0.3s ease;
   text-align: left;
 }
 
@@ -537,17 +548,19 @@ body {
   color: #555;
 }
 
-.offer-content button {
+.offer-content a {
+  text-decoration: none;
   background: #ff4b2b;
   border: none;
   color: #fff;
   padding: 10px 18px;
   border-radius: 6px;
   cursor: pointer;
-  transition: background 0.3s;
+  transition:transform 0.3s ease, background 0.3s ease;
 }
 
-.offer-content button:hover {
+.offer-content a:hover {
+  transform: translateY(-10px);
   background: #ff1e00;
 }
 
@@ -680,12 +693,20 @@ body {
   height: 100%;
 
 }
-
-.footer-content-nav nav {
+.footer-nav-grid{
+  display: grid;
+ }
+.footer-content-nav a {
   text-decoration: none;
   list-style: none;
   line-height: 50px;
   text-indent: 20px;
+  color: white;
+  transition: transform 0.5s ease;
+}
+.footer-content-nav a:hover{
+  color: #0385ff;
+  transform: translatey(-10px);
 }
 
 .footer-content-nav li {
@@ -697,12 +718,24 @@ body {
   text-decoration: none;
   color: white;
   text-indent: 20px;
+    transition: color 0.5s ease;
+
+}
+.footer-content-contact a:hover{
+  color: #0385ff;
 }
 
-.footer-content-legal-link nav {
+.footer-content-legal-link li {
   list-style: none;
   line-height: 70px;
   text-indent: 20px;
+  cursor: pointer;
+    transition: transform 0.5s ease;
+
+}
+.footer-content-legal-link li:hover{
+  color: #0385ff;
+  transform: translatey(-10px);
 }
 
 .footer-copy {
@@ -710,6 +743,7 @@ body {
   background-color: #1C1C1C;
   color: white;
 }
+
 
 @media (max-width: 768px) {
   .header-cls img {
@@ -760,27 +794,31 @@ body {
 @media (max-width:468px) {
   .menu-items {
     flex-direction: column;
-    background: #222;
+    background: #787878ae;
     position: fixed;
     top: 0;
     right: -350px;
     width: 250px;
-    height: 100%;
+    height: auto;
     padding: 60px 20px;
-    transition: right 0.3s ease;
+    transition: right 0.5s ease;
     z-index: 999;
+    color: #0385ff;
   }
 
   .btn-close {
     display: block;
-    color: red;
+    color: rgb(0, 0, 0);
+    background-color: #0385ff00;
+    cursor: pointer;
+    border-color: #00000000;
   }
 
   .hamburger {
     display: block;
     margin-right: 30px;
     cursor: pointer;
-    color: white;
+    color: rgb(0, 0, 0);
 
   }
 
@@ -834,6 +872,10 @@ body {
     grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
     gap: 20px;
     animation: scroll-left 55s linear infinite;
+  }
+  .contact-grid{
+    width: 100%;
+    margin-left: 4%;
   }
 
   .contact-grid-l form {
