--- a/Homepage2/style.css
+++ b/Homepage2/style.css
@@ -621,7 +621,8 @@ body {
   width: 100%;
 }
 
-.contact-grid-l button {
+.contact-grid-l a {
+  text-decoration: none;
   padding: 10px 20px;
   background: #4CAF50;
   border: none;
@@ -664,8 +665,12 @@ body {
   display: grid;
   grid-template-columns: 10% 10% 10%;
   margin-left: 5%;
+  color: #000000;
 }
-
+.contact-r-social a{
+  color: #ffffff;
+ 
+}
 .footer {
   margin-top: 5%;
 }
@@ -691,6 +696,9 @@ body {
 .footer-content-company img {
   width: 100%;
   height: 100%;
+}
+.footer-content-company{
+  margin-left: 5%;
 
 }
 .footer-nav-grid{
@@ -724,16 +732,31 @@ body {
 .footer-content-contact a:hover{
   color: #0385ff;
 }
+.footer-content-legal-link a{
+  text-decoration: none;
+  color: white;
+   text-align: justify;
 
+}
 .footer-content-legal-link li {
   list-style: none;
-  line-height: 70px;
   text-indent: 20px;
-  cursor: pointer;
-    transition: transform 0.5s ease;
+ text-align: justify;
+     transition: transform 0.5s ease;
 
 }
 .footer-content-legal-link li:hover{
+    color: #0385ff;
+  transform: translatey(-10px);
+}
+.footer-content-legal-link a {
+  line-height: 70px;
+  cursor: pointer;
+    transition: transform 0.5s ease;
+    /* color: white; */
+
+}
+.footer-content-legal-link a:hover{
   color: #0385ff;
   transform: translatey(-10px);
 }
