--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,7 @@
  }
 
  .hero {
-     background-image: url('./assets/hong-nguyen-FO-zQd7Wqio-unsplash.jpg');
+     background-image: url('./assets/hero-img.jpg');
      background-size: cover;
      background-repeat: no-repeat;
      background-position: center center;
